--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "istari",
+  "name": "istari-vscode",
   "displayName": "istari",
   "description": "",
   "version": "0.0.1",
   "engines": {
-    "vscode": "^1.71.0"
+    "vscode": "^1.93.0"
   },
   "categories": [
     "Other"
   ],
   "activationEvents": [
-    "onCommand:istari.start"
+    "onCommand:istari-vscode.helloWorld"
   ],
   "main": "./out/extension.js",
   "contributes": {
     "commands": [
       {
-        "command": "istari.start",
-        "title": "Istari Start"
+        "command": "istari-vscode.helloWorld",
+        "title": "Hello World"
       }
     ]
   },
@@ -30,7 +30,7 @@
     "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
-    "@types/vscode": "^1.71.0",
+    "@types/vscode": "^1.93.0",
     "@types/glob": "^7.2.0",
     "@types/mocha": "^9.1.1",
     "@types/node": "16.x",
