--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "languages": [
       {
         "id": "istari",
-        "extensions": [".ist"]
+        "extensions": [
+          ".ist"
+        ]
       }
     ],
     "grammars": [
