--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "istari",
   "displayName": "istari",
-  "description": "",
+  "description": "Istari plugin for vscode",
+  "publisher" : "pi314mm",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.93.0"
