improve completions to include words from the entire document

--- a/package.json
+++ b/package.json
@@ -159,7 +159,7 @@
       },
       {
         "command": "istari.jumpToPreviouslyRequested",
-        "key": "ctrl+;",
+        "key": "ctrl+'",
         "when": "resourceLangId == istari"
       },
       {
