--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "istari",
   "description": "Istari plugin for vscode",
   "publisher": "pi314mm",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "engines": {
     "vscode": "^1.93.0"
   },
@@ -66,6 +66,11 @@
           "type": "boolean",
           "default": true,
           "description": "Color the side gutter bar with icons"
+        },
+        "istari.continueJumpingForward": {
+          "type": "boolean",
+          "default": false,
+          "description": "If jump to specific line should advance line by one if already at that line"
         }
       }
     },
